[metadata]
name = atmosphere

[files]
packages =
    atmosphere

[entry_points]
console_scripts =
    atmosphere-manage = atmosphere.manage:main
wsgi_scripts =
    atmosphere-ingress-wsgi = atmosphere.api.ingress:init_application
    atmosphere-usage-wsgi = atmosphere.api.usage:init_application

[tool:pytest]
mocked-sessions=atmosphere.models.db.session
